; ModuleID = '/home/carl/AnghaBench/h2o/deps/brotli/c/common/extr_dictionary.c_BrotliSetDictionaryData.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/brotli/c/common/extr_dictionary.c_BrotliSetDictionaryData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@kBrotliDictionary = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BrotliSetDictionaryData(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kBrotliDictionary, i32 0, i32 0), align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %5
  %9 = load i32*, i32** %2, align 8
  store i32* %9, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kBrotliDictionary, i32 0, i32 0), align 8
  br label %10

10:                                               ; preds = %8, %5, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
